maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:9: error: ')' expected but ';' found.
	gauche();
                ^